// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders PlayListItem component correctly 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-y-4 py-2"
  >
    <div
      class="flex items-center bg-neutral-50 dark:bg-white shadow-md hover:scale-105 p-2 rounded-lg transition duration-200 px-4 "
    >
      <div
        class="flex-1"
      >
        <p
          class="font-thin subpixel-antialiased text-base text-black"
        >
          Tidal Drift
        </p>
        <p
          class="text-sm font-normal subpixel-antialiased  text-natural-stone  dark:text-neutral-700"
        >
          Echos of the Sea
        </p>
      </div>
      <div
        class="text-right  text-sm font-normal subpixel-antialiased  text-natural-stone dark:text-neutral-700"
      >
        4:00 
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders PlayListItem component with different song 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-y-4 py-2"
  >
    <div
      class="flex items-center bg-neutral-50 dark:bg-white shadow-md hover:scale-105 p-2 rounded-lg transition duration-200 px-4 "
    >
      <div
        class="flex-1"
      >
        <p
          class="font-thin subpixel-antialiased text-base text-black"
        >
          Cosmic Drift
        </p>
        <p
          class="text-sm font-normal subpixel-antialiased  text-natural-stone  dark:text-neutral-700"
        >
          Solar Flare
        </p>
      </div>
      <div
        class="text-right  text-sm font-normal subpixel-antialiased  text-natural-stone dark:text-neutral-700"
      >
        5:00 
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders PlayListItem component with selected state 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-y-4 py-2"
  >
    <div
      class="flex items-center bg-neutral-50 dark:bg-white shadow-md hover:scale-105 p-2 rounded-lg transition duration-200 px-4 border-2 border-olive-green"
    >
      <div
        class="flex-1"
      >
        <p
          class="font-thin subpixel-antialiased text-base text-black"
        >
          Fading Shadows
        </p>
        <p
          class="text-sm font-normal subpixel-antialiased  text-natural-stone  dark:text-neutral-700"
        >
          The Emberlight
        </p>
      </div>
      <div
        class="text-right  text-sm font-normal subpixel-antialiased  text-natural-stone dark:text-neutral-700"
      >
        4:00 
      </div>
    </div>
  </div>
</DocumentFragment>
`;
